Fixed Responsive issues in Arrival Kit and Feedback Visibility in Success Calculator

--- a/ArrivalKit.css
+++ b/ArrivalKit.css
@@ -30,6 +30,7 @@ ul {
   font-weight: normal;
   color: var(--white);
   font-size: 18px;
+  margin-right: 25px;
 }
 
 .arrivalKitItem p span {
@@ -84,7 +85,7 @@ ul {
 
 @media (max-width: 650px) {
   main {
-    width: 90%;
+    width: 98%;
   }
 
   main h1 {
@@ -92,11 +93,12 @@ ul {
   }
 
   ul {
-    font-size: 15px;
+    font-size: 13px;
   }
 
   .arrivalKitItem p {
     font-size: 13px;
+    margin-right: 25px;
   }
 
   .btn {
